# efficient-multilabel-text-classification

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  chatgptlogs.txt  efficient-multilabel-text-classification.md  params.yaml  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
logs/: events.out.tfevents.1733343272.DSQZH3F6.7332.0  events.out.tfevents.1733343349.DSQZH3F6.20572.0
notebooks/: dev_preprocessing.ipynb
reports/metrics/: metrics_history_cls.csv  metrics_history_cls_x.csv
runs/cls_special_tokens/: events.out.tfevents.1734688628.DESKTOP-V4AAMLP.15896.0
runs/cls_standard/: events.out.tfevents.1734680891.DESKTOP-V4AAMLP.21452.0
src/: dataset_preprocessing.py
src/entities/: __init__.py  params.py  utils.py
src/modeling/: train.py  train_CLS.py  train_CLS_X.py  train_x.py
