[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "A project exploring efficient transformer-based architectures for multilabel text classification using the Jigsaw Toxic Comment Classification dataset. Includes data preprocessing, model implementation, experimental comparison, and detailed results analysis."
authors = [
  { name = "Larin Alexey, Lisitsin Ivan, Vinnik Yuriy" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["src"]
force_sort_within_sections = true
